[gd_scene load_steps=8 format=3 uid="uid://doa7u5jwh54u4"]

[ext_resource type="Script" path="res://ships/KenneyTest01.gd" id="1_7jo2w"]
[ext_resource type="PackedScene" uid="uid://eg80473wh2sn" path="res://thirdparty/kenney-space-gltf/craft_miner.glb" id="2_x0pxd"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_gyauc"]

[sub_resource type="BoxShape3D" id="BoxShape3D_ctb1t"]
size = Vector3(1.81, 0.75, 2.68)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_tqwao"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7tckx"]
transparency = 1
albedo_color = Color(0.513726, 0.435294, 0.517647, 0.533333)
emission_enabled = true
emission = Color(0.541176, 0.427451, 0.254902, 1)

[sub_resource type="SphereMesh" id="SphereMesh_lw2gt"]
material = SubResource("StandardMaterial3D_7tckx")
radius = 0.125
height = 0.25
radial_segments = 16
rings = 8

[node name="KenneyTest01" type="RigidBody3D"]
transform = Transform3D(1, 0, 1.74846e-07, 0, 1, 0, -1.74846e-07, 0, 1, 0, 0, 0)
mass = 100.0
physics_material_override = SubResource("PhysicsMaterial_gyauc")
can_sleep = false
script = ExtResource("1_7jo2w")

[node name="craft_miner" parent="." instance=ExtResource("2_x0pxd")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 2, 0, 1.475)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.347, 0)
shape = SubResource("BoxShape3D_ctb1t")

[node name="LightForward01" type="SpotLight3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.5, 0.2, 1.275)
light_energy = 50.0

[node name="LightForward02" type="SpotLight3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -0.5, 0.2, 1.275)
light_energy = 50.0

[node name="LightDownward01" type="SpotLight3D" parent="."]
transform = Transform3D(-1, 8.74228e-08, 3.82137e-15, 0, -4.37114e-08, 1, 8.74228e-08, 1, 4.37114e-08, 0.5, 0, 1.075)
light_energy = 10.0

[node name="LightDownward02" type="SpotLight3D" parent="."]
transform = Transform3D(-1, 8.74228e-08, 3.82137e-15, 0, -4.37114e-08, 1, 8.74228e-08, 1, 4.37114e-08, -0.5, 0, 1.075)
light_energy = 10.0

[node name="LightDownward03" type="SpotLight3D" parent="."]
transform = Transform3D(-1, 8.74228e-08, 3.82137e-15, 0, -4.37114e-08, 1, 8.74228e-08, 1, 4.37114e-08, 0.3, 0, -0.825)
light_energy = 10.0

[node name="LightDownward04" type="SpotLight3D" parent="."]
transform = Transform3D(-1, 8.74228e-08, 3.82137e-15, 0, -4.37114e-08, 1, 8.74228e-08, 1, 4.37114e-08, -0.3, 0, -0.825)
light_energy = 10.0

[node name="ChaseCam" type="Camera3D" parent="."]
transform = Transform3D(-1, -3.03616e-08, -9.00791e-08, -4.55424e-08, 0.984808, 0.173648, 8.34383e-08, 0.173648, -0.984808, -1.89491e-07, 2.8, -9.825)

[node name="UpThrustParticles" type="GPUParticles3D" parent="."]
emitting = false
process_material = SubResource("ParticleProcessMaterial_tqwao")
draw_pass_1 = SubResource("SphereMesh_lw2gt")

[node name="DownThrustParticles" type="GPUParticles3D" parent="."]
emitting = false
process_material = SubResource("ParticleProcessMaterial_tqwao")
draw_pass_1 = SubResource("SphereMesh_lw2gt")

[node name="ForwardThrustParticles" type="GPUParticles3D" parent="."]
emitting = false
process_material = SubResource("ParticleProcessMaterial_tqwao")
draw_pass_1 = SubResource("SphereMesh_lw2gt")
